Initial java 9 support. Some fixes, added config and radio manager! Obfuscation is not supported, it will be fixed in next commits.